@@ -16,279 +16,164 @@
 */
 package nl.moj.server.test.service;
 
-import java.io.File;
-import java.nio.file.Path;
-import java.time.Duration;
+import javax.transaction.Transactional;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Executor;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
-import nl.moj.server.assignment.descriptor.AssignmentDescriptor;
-import nl.moj.server.config.properties.MojServerProperties;
-import nl.moj.server.runtime.CompetitionRuntime;
-import nl.moj.server.runtime.model.ActiveAssignment;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import nl.moj.common.messages.*;
+import nl.moj.server.compiler.model.CompileAttempt;
+import nl.moj.server.compiler.service.CompileRequest;
+import nl.moj.server.compiler.service.CompileService;
+import nl.moj.server.message.service.MessageService;
 import nl.moj.server.runtime.model.AssignmentFile;
-import nl.moj.server.runtime.model.AssignmentStatus;
-import nl.moj.server.runtime.repository.AssignmentStatusRepository;
-import nl.moj.server.teams.model.Team;
+import nl.moj.server.runtime.model.TeamAssignmentStatus;
+import nl.moj.server.runtime.repository.TeamAssignmentStatusRepository;
 import nl.moj.server.teams.service.TeamService;
 import nl.moj.server.test.model.TestAttempt;
 import nl.moj.server.test.model.TestCase;
 import nl.moj.server.test.repository.TestAttemptRepository;
 import nl.moj.server.test.repository.TestCaseRepository;
-import nl.moj.server.util.CompletableFutures;
-import nl.moj.server.util.LengthLimitedOutputCatcher;
-import org.apache.commons.io.FileUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.springframework.cloud.sleuth.annotation.NewSpan;
+import org.springframework.jms.core.JmsTemplate;
 import org.springframework.stereotype.Service;
-import org.springframework.util.Assert;
-import org.zeroturnaround.exec.ProcessExecutor;
 
 @Service
+@Slf4j
+@RequiredArgsConstructor
 public class TestService {
-    public static final String SECURITY_POLICY_FOR_UNIT_TESTS = "securityPolicyForUnitTests.policy";
-    private static final Logger log = LoggerFactory.getLogger(TestService.class);
-    private static final Pattern JUNIT_PREFIX_P = Pattern.compile("^(JUnit version 4.12)?\\s*\\.?",
-            Pattern.MULTILINE | Pattern.CASE_INSENSITIVE | Pattern.DOTALL);
 
-    private final MojServerProperties mojServerProperties;
-
+    private final CompileService compileService;
     private final TestCaseRepository testCaseRepository;
-
     private final TestAttemptRepository testAttemptRepository;
-
-    private final AssignmentStatusRepository assignmentStatusRepository;
-
+    private final TeamAssignmentStatusRepository teamAssignmentStatusRepository;
     private final TeamService teamService;
+    private final JmsTemplate jmsTemplate;
+    private final MessageService messageService;
 
-    public TestService(MojServerProperties mojServerProperties, CompetitionRuntime competition,
-                       TestCaseRepository testCaseRepository, TestAttemptRepository testAttemptRepository,
-                       AssignmentStatusRepository assignmentStatusRepository, TeamService teamService) {
-        this.mojServerProperties = mojServerProperties;
-        this.testCaseRepository = testCaseRepository;
-        this.testAttemptRepository = testAttemptRepository;
-        this.assignmentStatusRepository = assignmentStatusRepository;
-        this.teamService = teamService;
+    @Transactional
+    public void receiveTestResponse(JMSTestResponse testResponse) {
+        log.info("Received test attempt response {}", testResponse.getAttempt());
+        TestAttempt testAttempt = registerTestResponse(testResponse);
+        messageService.sendTestFeedback(testAttempt);
     }
 
-    private CompletableFuture<TestResult> scheduleTest(Team team, TestAttempt testAttempt, AssignmentFile test, Executor executor, ActiveAssignment activeAssignment) {
-        Assert.isTrue(activeAssignment.getCompetitionSession()!=null,"CompetitionSession is not ready");
-        return CompletableFuture.supplyAsync(() -> executeTest(team, testAttempt, test, activeAssignment), executor);
+    @Transactional
+    @NewSpan
+    public TestAttempt registerTestAttempt(TestRequest testRequest) {
+
+        log.info("Registering test attempt for assignment {} by team {}.", testRequest.getAssignment()
+                .getUuid(), testRequest.getTeam().getUuid());
+        messageService.sendTestingStarted(testRequest.getTeam());
+
+        // save the team progress
+        teamService.updateAssignment(testRequest.getTeam().getUuid(), testRequest.getSession().getUuid(),
+                testRequest.getAssignment().getUuid(), testRequest.getSources());
+
+        TestAttempt testAttempt = prepareTestAttempt(testRequest);
+        // send JMS test request
+        jmsTemplate.convertAndSend("test_request", JMSTestRequest.builder()
+                .attempt(testAttempt.getUuid())
+                .assignment(testRequest.getAssignment().getUuid())
+                .sources(testRequest.getSources().entrySet().stream().map(e -> JMSFile.builder()
+                        .type(JMSFile.Type.SOURCE)
+                        .path(e.getKey().toString())
+                        .content(e.getValue())
+                        .build()).collect(Collectors.toList()))
+                .tests(testAttempt.getTestCases()
+                        .stream()
+                        .map(tc -> JMSTestCase.builder().testCase(tc.getUuid()).name(tc.getName()).build())
+                        .collect(Collectors.toList()))
+                .build());
+
+        log.info("Test attempt {} for assignment {} by team {} registered.", testAttempt.getUuid(), testRequest.getAssignment()
+                .getUuid(), testRequest.getTeam().getUuid());
+        return testAttempt;
     }
 
-    public CompletableFuture<TestResults> scheduleTests(TestRequest testRequest, List<AssignmentFile> tests, Executor executor, ActiveAssignment activeAssignment) {
-        log.info("activeAssignment: " + activeAssignment + " tests: " +tests.size());
-        List<CompletableFuture<TestResult>> testFutures = new ArrayList<>();
+    @Transactional
+    public TestAttempt prepareTestAttempt(TestRequest testRequest) {
+        TeamAssignmentStatus as = teamAssignmentStatusRepository.findByAssignment_IdAndCompetitionSession_IdAndTeam_Id(
+                testRequest.getAssignment().getId(), testRequest.getSession().getId(),
+                testRequest.getTeam().getId());
 
-        TestAttempt ta = null;
-        try {
-            AssignmentStatus optionalStatus = assignmentStatusRepository.findByAssignmentAndCompetitionSessionAndTeam(activeAssignment.getAssignment(),
-                    activeAssignment.getCompetitionSession(), testRequest.getTeam());
-            ta = registerIfNeeded(TestAttempt.builder()
-                    .assignmentStatus(optionalStatus)
-                    .dateTimeStart(Instant.now())
-                    .uuid(UUID.randomUUID())
-                    .build());
-            log.info("ta.id " + ta.getId() );
-            Assert.isTrue(activeAssignment.getCompetitionSession()!=null,"CompetitionSession is not ready");
-            log.info("testFutures " + testFutures.size());
-        } catch (Exception ex) {
-            log.error(ex.getMessage(), ex);
-            throw new RuntimeException(ex);
-        }
-        final TestAttempt testAttempt = ta;
-        tests.forEach(t -> testFutures.add(scheduleTest(testRequest.getTeam(), testAttempt, t, executor, activeAssignment)));
+        CompileAttempt compileAttempt = compileService.prepareCompileAttempt(
+                CompileRequest.builder()
+                        .assignment(testRequest.getAssignment())
+                        .session(testRequest.getSession())
+                        .sources(testRequest.getSources())
+                        .team(testRequest.getTeam())
+                        .build());
 
-        return CompletableFutures.allOf(testFutures).thenApply(r -> {
-            testAttempt.setDateTimeEnd(Instant.now());
-            TestAttempt updatedTa = registerIfNeeded(testAttempt);
-            return TestResults.builder()
-                    .dateTimeStart(updatedTa.getDateTimeStart())
-                    .dateTimeEnd(updatedTa.getDateTimeEnd())
-                    .testAttemptUuid(updatedTa.getUuid())
-                    .results(r)
-                    .build();
-        });
-    }
-
-    private TestAttempt registerIfNeeded(TestAttempt ta) {
-        TestAttempt result = ta;
-        if (result.getAssignmentStatus()!=null) {
-            result = testAttemptRepository.save(ta);
-        }
-        return result;
-    }
-
-    private TestResult executeTest(Team team, TestAttempt testAttempt, AssignmentFile file, ActiveAssignment activeAssignment) {
-        Assert.isTrue(activeAssignment.getCompetitionSession()!=null,"CompetitionSession is not ready");
-        Assert.isTrue(activeAssignment.getAssignment().getName()!=null,"assignmentcontext is not ready");
-        TestCase testCase = TestCase.builder()
-                .testAttempt(testAttempt)
-                .name(file.getName())
+        TestAttempt testAttempt = TestAttempt.builder()
+                .assignmentStatus(as)
                 .uuid(UUID.randomUUID())
-                .dateTimeStart(Instant.now())
+                .dateTimeRegister(Instant.now())
+                .compileAttempt(compileAttempt)
                 .build();
+        testAttempt = testAttemptRepository.save(testAttempt);
 
-
-        AssignmentDescriptor ad = activeAssignment.getAssignmentDescriptor();
-        Path teamAssignmentDir = teamService.getTeamAssignmentDirectory(activeAssignment.getCompetitionSession(), team, activeAssignment
-                .getAssignment());
-
-        Path policy = ad.getAssignmentFiles().getSecurityPolicy();
-        if (policy != null) {
-            policy = ad.getDirectory().resolve(policy);
-        } else {
-            policy = mojServerProperties.getDirectories().getBaseDirectory()
-                    .resolve(mojServerProperties.getDirectories().getLibDirectory())
-                    .resolve(SECURITY_POLICY_FOR_UNIT_TESTS);
-        }
-
-        Duration timeout = ad.getTestTimeout() != null ? ad.getTestTimeout() :
-                mojServerProperties.getLimits().getTestTimeout();
-
-        if (!policy.toFile().exists()) {
-            log.error("No security policy other than default JVM version installed, refusing to execute tests. Please configure a default security policy.");
-            throw new RuntimeException("security policy file not found");
-        }
-        log.info("starting commandExecutor {} ", teamAssignmentDir);
-
-        try (final LengthLimitedOutputCatcher jUnitOutput = new LengthLimitedOutputCatcher(mojServerProperties.getLimits()
-                .getTestOutputLimits());
-             final LengthLimitedOutputCatcher jUnitError = new LengthLimitedOutputCatcher(mojServerProperties.getLimits()
-                     .getTestOutputLimits())){
-            boolean isTimeout = false;
-            int exitvalue = 0;
-
-            try {
-                List<String> commandParts = new ArrayList<>();
-
-                commandParts.add(mojServerProperties.getLanguages()
-                        .getJavaVersion(ad.getJavaVersion())
-                        .getRuntime()
-                        .toString());
-                if (ad.getJavaVersion()>=12) {
-                    commandParts.add("--enable-preview");
-                }
-                commandParts.add("-cp");
-                commandParts.add(makeClasspath(teamAssignmentDir));
-                commandParts.add("-Djava.security.manager");
-                commandParts.add("-Djava.security.policy=" + policy.toAbsolutePath());
-                commandParts.add("org.junit.runner.JUnitCore");
-                commandParts.add(file.getName());
-
-                final ProcessExecutor commandExecutor = new ProcessExecutor().command(commandParts);
-                log.debug("Executing command {}", commandExecutor.getCommand().toString().replaceAll(",", "\n"));
-                exitvalue = commandExecutor.directory(teamAssignmentDir.toFile())
-                        .timeout(timeout.toSeconds(), TimeUnit.SECONDS).redirectOutput(jUnitOutput)
-                        .redirectError(jUnitError).execute().getExitValue();
-            } catch (TimeoutException e) {
-                // process is automatically destroyed
-                log.debug("Unit test for {} timed out and got killed", team.getName());
-                isTimeout = true;
-            } catch (SecurityException se) {
-                log.debug("Unit test for {} got security error", team.getName());
-                log.error(se.getMessage(), se);
-            }
-            if (isTimeout) {
-                jUnitOutput.getBuffer()
-                        .append('\n')
-                        .append(mojServerProperties.getLimits().getTestOutputLimits().getTimeoutMessage());
-            }
-
-            final boolean success;
-            final String result;
-            if (jUnitOutput.length() > 0) {
-                stripJUnitPrefix(jUnitOutput.getBuffer());
-                // if we still have some output left and exitvalue = 0
-                success = jUnitOutput.length() > 0 && exitvalue == 0 && !isTimeout;
-                result = jUnitOutput.toString();
-                if (jUnitOutput.length()==0) {
-                    log.info("zero normal junit output, error output: {}-{}", jUnitOutput.toString(), jUnitError.toString()  );
-                }
-            } else {
-                log.info("zero normal junit output, error output: {}", jUnitError.toString() );
-                result = jUnitError.toString();
-                success = (exitvalue == 0) && !isTimeout;
-            }
-            log.info("finished unit test: {}, exitvalue: {}, outputlength: {}, isTimeout: {} ", file.getName(), exitvalue, result.length(), isTimeout );
-
-            testCase = testCase.toBuilder()
-                    .success(success)
-                    .timeout(isTimeout)
-                    .testOutput(result)
-                    .dateTimeEnd(Instant.now())
+        for (AssignmentFile af : testRequest.getTests()) {
+            TestCase tc = TestCase.builder()
+                    .uuid(UUID.randomUUID())
+                    .testAttempt(testAttempt)
+                    .name(af.getName())
+                    .dateTimeRegister(Instant.now())
                     .build();
-            if (testAttempt.getAssignmentStatus()!=null) {
-                testCase = testCaseRepository.save(testCase);
-            }
-            testAttempt.getTestCases().add(testCase);
-
-            return TestResult.builder()
-                    .testCaseUuid(testCase.getUuid())
-                    .dateTimeStart(testCase.getDateTimeStart())
-                    .dateTimeEnd(testCase.getDateTimeEnd())
-                    .success(testCase.isSuccess())
-                    .timeout(testCase.isTimeout())
-                    .testName(testCase.getName())
-                    .testOutput(testCase.getTestOutput())
-                    .build();
-        } catch (Exception e) {
-            log.error(e.getMessage(), e);
+            testAttempt.getTestCases().add(testCaseRepository.save(tc));
         }
 
-        // TODO this should not be a null result.
-        return null;
+        as.getTestAttempts().add(testAttempt);
+        return testAttempt;
     }
 
-    private void stripJUnitPrefix(StringBuilder result) {
-        final Matcher matcher = JUNIT_PREFIX_P.matcher(result);
-        if (matcher.find()) {
-            log.trace("stripped '{}'", matcher.group());
-            result.delete(0, matcher.end());
-            if (result.length() > 0 && result.charAt(0) == '\n') {
-                result.deleteCharAt(0);
-            }
-        } else {
-            log.trace("stripped nothing of '{}'", result.subSequence(0, 50));
-        }
+    @Transactional
+    public TestAttempt registerTestResponse(JMSTestResponse testResponse) {
+        TestAttempt testAttempt = testAttemptRepository.findByUuid(testResponse.getAttempt());
+        return update(testAttempt, testResponse);
     }
 
-    private String makeClasspath(Path teamAssignmentDir) {
-        File classesDir = FileUtils.getFile(teamAssignmentDir.toFile(), "classes");
-        final List<File> classPath = new ArrayList<>();
-        classPath.add(classesDir);
-        classPath.add(
-                FileUtils.getFile(mojServerProperties.getDirectories()
-                        .getBaseDirectory()
-                        .toFile(), mojServerProperties.getDirectories().getLibDirectory(), "junit-4.12.jar"));
-        classPath.add(FileUtils.getFile(mojServerProperties.getDirectories()
-                        .getBaseDirectory()
-                        .toFile(), mojServerProperties.getDirectories().getLibDirectory(),
-                "hamcrest-all-1.3.jar"));
-        classPath.add(FileUtils.getFile(mojServerProperties.getDirectories().getBaseDirectory().toFile(),
-                mojServerProperties.getDirectories().getLibDirectory(), "asciiart-core-1.1.0.jar"));
+    @Transactional(Transactional.TxType.MANDATORY)
+    public TestAttempt update(TestAttempt testAttempt, JMSTestResponse testResponse) {
 
-        for (File file : classPath) {
-            if (!file.exists()) {
-                log.error("not found: {}", file.getAbsolutePath());
-            } else {
-                log.debug("on cp: {}", file.getAbsolutePath());
+        if (testAttempt == null) {
+            return null;
+        }
+        if (testResponse == null) {
+            return testAttempt;
+        }
+
+        testAttempt.setDateTimeStart(testResponse.getStarted());
+        testAttempt.setDateTimeEnd(testResponse.getEnded());
+        testAttempt.setWorker(testResponse.getWorker());
+        testAttempt.setTrace(testResponse.getTraceId());
+        testAttempt.setAborted(testResponse.isAborted());
+        testAttempt.setReason(testResponse.getReason());
+
+        Map<UUID, JMSTestCaseResult> testCaseResults = testResponse.getTestCaseResults().stream()
+                .collect(Collectors.toMap(JMSTestCaseResult::getTestCase, tcr -> tcr));
+
+        if (testAttempt.getTestCases() != null) {
+            for (TestCase tc : testAttempt.getTestCases()) {
+                if (testCaseResults.containsKey(tc.getUuid())) {
+                    JMSTestCaseResult tcr = testCaseResults.get(tc.getUuid());
+                    tc.setWorker(tcr.getWorker());
+                    tc.setTrace(tcr.getTraceId());
+                    tc.setTestOutput(tcr.getOutput());
+                    tc.setDateTimeStart(tcr.getStarted());
+                    tc.setDateTimeEnd(tcr.getEnded());
+                    tc.setSuccess(tcr.isSuccess());
+                    tc.setTimeout(tcr.isTimeout());
+                    tc.setAborted(tcr.isAborted());
+                    tc.setReason(tcr.getReason());
+                    testCaseRepository.save(tc);
+                }
             }
         }
-        StringBuilder sb = new StringBuilder();
-        for (File file : classPath) {
-            sb.append(file.getAbsolutePath());
-            sb.append(File.pathSeparator);
-        }
-        return sb.toString();
+        compileService.update(testAttempt.getCompileAttempt(), testResponse.getCompileResponse());
+        return testAttemptRepository.save(testAttempt);
     }
-
 }
